[gd_scene load_steps=3 format=2]

[ext_resource path="res://res/fonts/Neufreit-ExtraBold.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 300 )
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -162.5
margin_right = 250.0
margin_bottom = 162.5
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 400.0
margin_bottom = 225.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="ColorRect/MarginContainer/ButtonContainer"]
margin_right = 300.0
margin_bottom = 29.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="ColorRect/MarginContainer/ButtonContainer"]
margin_top = 39.0
margin_right = 300.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 1 )
text = "Restart"

[node name="QuitButton" type="Button" parent="ColorRect/MarginContainer/ButtonContainer"]
margin_top = 78.0
margin_right = 300.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"
[connection signal="pressed" from="ColorRect/MarginContainer/ButtonContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/ButtonContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/ButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
